core/anything-events/node_derive/tests/nodes/03-no-run-fn.stderr
error[E0599]: no method named `run` found for mutable reference `&mut SimpleNode` in the current scope
 --> tests/nodes/03-no-run-fn.rs:5:10
  |
5 | #[derive(Node)]
  |          ^^^^ method not found in `&mut SimpleNode`
  |
  = note: this error originates in the derive macro `Node` (in Nightly builds, run with -Z macro-backtrace for more info)
