core/anything-events/node_derive/tests/nodes/03-no-run-fn.rs
mod common;
use common::*;
use node_derive::Node;

#[derive(Node)]
pub struct SimpleNode {
    pub input: NodeReceiver<u32>,
    pub output: NodeSender<Vec<u32>>,
}

fn main() {}
